--- a/free-nodes/2024-3-18-free-ssr-subscribe.htm
+++ b/free-nodes/2024-3-18-free-ssr-subscribe.htm
@@ -3,12 +3,12 @@
 <html lang="zh-CN">
 <head>
 <link rel="canonical" href="https://clashgithub.github.io" />
-<title>3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</title>
+<title>3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="3月17日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
-<meta name="description" content="3月17日节点订阅更新,Clash/Shadowrocket/V2ray/SSR免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了美国、韩国、日本、加拿大、新加坡、香港、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
+<meta name="keywords" content="3月18日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
+<meta name="description" content="3月18日节点订阅更新,Clash/Shadowrocket/V2ray/SSR免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了美国、日本、欧洲、加拿大、香港、韩国、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -80,7 +80,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1>3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</h1>
+			<h1>3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
@@ -94,24 +94,23 @@
 		<div class="container">
 
 			<div class="wthree_single_grid1">
-				<p>这次的更新跨足了美国、韩国、日本、加拿大、新加坡、香港、欧洲等多个地区，节点覆盖广泛，最高速度可达19.6 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【快猫】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">全球多节点，4K不卡顿；</p>
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">不限登陆设备数，<strong style="margin: 0px; padding: 0px;"><span style="margin: 0px; padding: 0px; color: rgb(255, 0, 0);">季付送小火箭</span></strong>；</p>
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">自用机场，稳定第一位</p>
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://home.kuaimao.io/#/register?code=" data-code="FGw9HJH0" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">快猫官网（点击注册）</a>】</p><h3>高速机场推荐2【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+				<p>这次的更新跨足了美国、日本、欧洲、加拿大、香港、韩国、新加坡等多个地区，节点覆盖广泛，最高速度可达20.1 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud1.com//#/register?code=" data-code="x1m5Kg8R" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">FCCloud（点击注册）</a>】</p>
 
-<p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240317.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240317.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240317.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240317.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240317.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240317.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240317.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240317.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240317.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240317.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://feiniaoyun.net/#/register?code=" data-code="gXt4uKVm" rel="nofollow noopener" style="color:#c00;">飞鸟云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
+<h3>高速机场推荐2【快猫】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">全球多节点，4K不卡顿；</p>
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">不限登陆设备数，<strong style="margin: 0px; padding: 0px;"><span style="margin: 0px; padding: 0px; color: rgb(255, 0, 0);">季付送小火箭</span></strong>；</p>
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">自用机场，稳定第一位</p>
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://home.kuaimao.io/#/register?code=" data-code="FGw9HJH0" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">快猫官网（点击注册）</a>】</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240318.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240318.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240318.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240318.yaml</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240318.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/03/0-20240318.txt</p><p>https://clashgithub.github.io/uploads/2024/03/1-20240318.txt</p><p>https://clashgithub.github.io/uploads/2024/03/2-20240318.txt</p><p>https://clashgithub.github.io/uploads/2024/03/3-20240318.txt</p><p>https://clashgithub.github.io/uploads/2024/03/4-20240318.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
 
             <div class="col-md-12 mt-5">
-                                <p>上一个：<a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></p>
-                                <p>下一个：<a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm">3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></p>
+                                <p>上一个：<a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm">3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></p>
                             </div>
 
                         <div class="panel panel-default mt-5">
@@ -120,6 +119,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 </div>
                 <div class="panel-body">
                     <ul class="p-0 x-0">
+                                                <li class="py-2"><a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm">3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-15-node-share-links.htm">3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-14-free-node-subscribe-links.htm">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
@@ -129,7 +129,6 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                                                 <li class="py-2"><a href="/free-nodes/2024-3-10-node-share-links.htm">3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-9-free-clash-subscribe.htm">3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-8-free-shadowrocket-node.htm">3月8日22M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-7-clash-windows.htm">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
                                             </ul>
                 </div>
             </div>
