--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm">
+					<img src="/uploads/20240228/1fe0e21ba1fc7b2413c5b6e668710c60.webp" alt="3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm">
+					<h2>3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了美国、日本、欧洲、加拿大、香港、韩国、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm">
 					<img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
