--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-25-free-ssr-node.htm">
+					<img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-25-free-ssr-node.htm">
+					<h2>3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、新加坡、美国、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-24-shadowrocket-node.htm">
 					<img src="/uploads/20240228/f678a99ac10a1536634e8f00cd88611b.webp" alt="3月24日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接" class="img-responsive" />
 				</a>
@@ -412,22 +428,6 @@
 					<h2>3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了美国、加拿大、香港、日本、欧洲、韩国、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-5-free-clash.htm">
-					<img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-5-free-clash.htm">
-					<h2>3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了美国、新加坡、欧洲、香港、加拿大、日本、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
